--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -15,10 +15,10 @@ spec:
       containers:
       - name: auth
         image: andreyohiienko/auth
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
+        # resources:
+        #   limits:
+        #     memory: "128Mi"
+        #     cpu: "500m"
         # ports:
         # - containerPort: <Port>
 ---
