--- a/payments/package.json
+++ b/payments/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.9.29",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^8.89.0",
     "ts-node-dev": "^1.0.0-pre.56",
     "typescript": "^3.9.7"
   },
