--- a/infra/k8s/payments-depl.yaml
+++ b/infra/k8s/payments-depl.yaml
@@ -31,6 +31,13 @@ spec:
             secretKeyRef:
               name: jwt-secret
               key: JWT_KEY
+        - name: STRIPE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: stripe-secret
+              key: STRIPE_KEY
+# kubectl create secret generic stripe-secret --from-literal STRIPE_KEY=/* secret key value */
+# kubectl get secrets - check all secrets
 ---
 apiVersion: v1
 kind: Service
