--- a/.github/workflows/deploy-manifests.yaml
+++ b/.github/workflows/deploy-manifests.yaml
@@ -1,19 +1,19 @@
-name: deploy-manifest
+name: deploy-manifests
 
-on: 
+on:
   push:
     branches: 
       - master
-    paths: 
+    paths:
       - 'infra/**'
 
-jobs: 
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: digitalocean/action-doctl@v2
-        with: 
+        with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
       - run: doctl kubernetes cluster kubeconfig save ticketing
       - run: kubectl apply -f infra/k8s && kubectl apply -f infra/k8s-prod
