--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -11,15 +11,28 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: cd auth && docker build -t andreyohiienko/auth .
-      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - name: Checkout master
+        uses: actions/checkout@v2
+
+      - name: Build container image
+        run: cd auth && docker build -t andreyohiienko/auth .
+
+      - name: Sign in to Docker account
+        run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker push andreyohiienko/auth
+
+      - name: Push image to DigitalOcean Container Registry
+        run: docker push andreyohiienko/auth
+
+      - name: Install doctl
       - uses: digitalocean/action-doctl@v2
         with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-      - run: doctl kubernetes cluster kubeconfig save ticketing
-      - run: kubectl rollout restart deployment auth-depl
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }
+
+      - name: Save DigitalOcean kubeconfig
+        run: doctl kubernetes cluster kubeconfig save ticketing
+
+      - name: Verify deployment
+        run: kubectl rollout restart deployment auth-depl
