--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -27,7 +27,7 @@ jobs:
       run: docker push andreyohiienko/auth
 
     - name: Install doctl
-    - uses: digitalocean/action-doctl@v2
+      uses: digitalocean/action-doctl@v2
       with:
         token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }
 
